# anytype-api

./: .coverage  .gitignore  Dockerfile  README.md  get_api_key.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  anytype_mcp_server.py  main.py  py.typed
app/clients/: anytype.py  api_client.py
app/core/: auth.py  config.py  logging.py
app/helpers/: __init__.py  api.py  constants.py  schemas.py  strings.py  validators.py
app/routers/: __init__.py  auth.py  objects.py  spaces.py  tags.py  types.py
tests/: .env.test  conftest.py  test_plan.md
tests/unit/: test_auth.py
tests/unit/helpers/: test_api.py  test_strings.py  test_validators.py
