[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anytype-api"
version = "1.0.0"
description = "FastAPI backend for Anytype integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "httpx>=0.23.0",
    "pydantic>=1.8.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.23.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

# Same as Black.
line-length = 88

# Target Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable all recommended rules + additional ones for code quality
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "A",   # flake8-builtins
    "T20", # flake8-print
    "RUF", # ruff-specific rules
]

# Never try to fix `F401` (unused imports)
unfixable = ["F401"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Format docstrings according to PEP 257.
docstring-code-format = true

# Enable auto-formatting of code examples in docstrings.
docstring-code-line-length = "dynamic"

[tool.hatch.build.targets.wheel]
packages = ["app"]
